--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="flex justify-center gap-4">
         <div class="relative group">
           <a
-            href="https://github.com/yourusername"
+            href="https://github.com/hollowdobt"
             target="_blank"
             class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20 shadow hover:shadow-lg transition"
           >
@@ -65,7 +65,7 @@
         </div>
         <div class="relative group">
           <a
-            href="mailto:you@example.com"
+            href="mailto:hollowdobt@qq.com"
             class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20 shadow hover:shadow-lg transition"
           >
             <i data-lucide="mail" class="w-5 h-5 text-white"></i>
@@ -91,7 +91,7 @@
         </div>
         <div class="relative group">
           <a
-            href="./blog.html"
+            href="https://docs.hollowlib.top/"
             class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20 shadow hover:shadow-lg transition"
           >
             <i data-lucide="book" class="w-5 h-5 text-white"></i>
