--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="relative group">
           <a
-            href="mailto:hollowdobt@qq.com"
+            href="mailto:rxq@hollowlib.top"
             class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20 shadow hover:shadow-lg transition"
           >
             <i data-lucide="mail" class="w-5 h-5 text-white"></i>
@@ -78,7 +78,7 @@
         </div>
         <div class="relative group">
           <a
-            href="#"
+            href="https://blogs.hollowlib.top"
             class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20 shadow hover:shadow-lg transition"
           >
             <i data-lucide="briefcase" class="w-5 h-5 text-white"></i>
