--- a/404-responsive.html
+++ b/404-responsive.html
@@ -88,6 +88,19 @@
       hr {
         display: none;
       }
+    
+      .btn {
+        max-width: 90vw;
+        white-space: nowrap;
+      }
+
+      @media (max-width: 400px) {
+        .btn {
+          font-size: 0.75rem;
+          padding: 0.5rem 1rem;
+        }
+      }
+
     </style>
   </head>
   <body>
@@ -100,7 +113,7 @@
       <p>The page you're looking for doesn't exist or has been moved.</p>
 
       <div
-        class="flex flex-wrap justify-center gap-4 mb-4 sm:flex-col sm:items-center"
+        class="flex flex-col items-center gap-3 px-4 mb-4 sm:flex-col sm:items-center"
       >
         <a
           href="https://hollowlib.top"
