--- a/404.html
+++ b/404.html
@@ -96,8 +96,8 @@
 
       @media (max-width: 400px) {
         .btn {
-          font-size: 0.75rem;
-          padding: 0.5rem 1rem;
+          font-size: 0.8125rem;
+          padding: 0.55rem 1.25rem;
         }
       }
 
@@ -113,7 +113,7 @@
       <p>The page you're looking for doesn't exist or has been moved.</p>
 
       <div
-        class="flex flex-col items-center gap-3 px-4 mb-4 sm:flex-col sm:items-center"
+        class="flex flex-col items-center gap-5 px-4 py-4 mb-4 sm:flex-col sm:items-center"
       >
         <a
           href="https://hollowlib.top"
