尝试修复手机页面上的响应式 404 布局

--- a/404.html
+++ b/404.html
@@ -96,8 +96,8 @@
 
       @media (max-width: 400px) {
         .btn {
-          font-size: 0.8125rem;
-          padding: 0.55rem 1.25rem;
+          font-size: 0.875rem;
+          padding: 0.6rem 1.5rem;
         }
       }
 
@@ -113,7 +113,7 @@
       <p>The page you're looking for doesn't exist or has been moved.</p>
 
       <div
-        class="flex flex-col items-center gap-5 px-4 py-4 mb-4 sm:flex-col sm:items-center"
+        class="flex flex-col sm:flex-row flex-wrap sm:flex-nowrap justify-center items-center gap-4 px-4 py-4"
       >
         <a
           href="https://hollowlib.top"
