尝试修复手机页面上的响应式 404 布局

--- a/404.html
+++ b/404.html
@@ -88,7 +88,7 @@
       hr {
         display: none;
       }
-    
+
       .btn {
         max-width: 90vw;
         white-space: nowrap;
@@ -100,7 +100,6 @@
           padding: 0.6rem 1.5rem;
         }
       }
-
     </style>
   </head>
   <body>
@@ -129,7 +128,7 @@
           title="Go to Database"
           aria-label="Blog"
         >
-          <i data-lucide="book-open" class="w-5 h-5"></i> Database
+          <i data-lucide="book-open" class="w-5 h-5"></i> Docs
         </a>
         <a
           href="https://blogs.hollowlib.top"
