--- a/404.html
+++ b/404.html
@@ -26,11 +26,18 @@
                 min-height: 100vh;
             }
 
-            canvas {
+            .rain-background {
                 position: fixed;
                 top: 0;
                 left: 0;
+                width: 100%;
+                height: 100%;
                 z-index: -1;
+                background-image: url('./rain.svg');
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-attachment: fixed;
             }
 
             .container {
@@ -129,7 +136,7 @@
     </head>
     <body>
         <!-- 背景动画 -->
-        <canvas id="fishCanvas"></canvas>
+        <div class="rain-background"></div>
 
         <!-- 内容区 -->
         <div class="container">
@@ -179,66 +186,9 @@
             <div class="footer">Designed by Hollow Dobt</div>
         </div>
 
-        <!-- 动画和跳转脚本 -->
+        <!-- 跳转脚本 -->
         <script>
             lucide.createIcons();
-
-            const canvas = document.getElementById("fishCanvas");
-            const ctx = canvas.getContext("2d");
-
-            function resizeCanvas() {
-                canvas.width = window.innerWidth;
-                canvas.height = window.innerHeight;
-            }
-
-            resizeCanvas();
-            window.addEventListener("resize", resizeCanvas);
-
-            class Fish {
-                constructor() {
-                    this.reset();
-                }
-
-                reset() {
-                    this.x = Math.random() * canvas.width;
-                    this.y = Math.random() * canvas.height;
-                    this.size = 10 + Math.random() * 10;
-                    this.speedY = 0.5 + Math.random() * 1.2;
-                    this.speedX = (Math.random() - 0.5) * 0.8; // 左右浮动
-                    this.color = `rgba(255,255,255,${Math.random() * 0.6 + 0.3})`;
-                }
-
-                update() {
-                    this.y += this.speedY;
-                    this.x += this.speedX;
-                    if (this.y > canvas.height + this.size) this.y = -this.size;
-                    if (
-                        this.x < -this.size ||
-                        this.x > canvas.width + this.size
-                    )
-                        this.x = Math.random() * canvas.width;
-                }
-
-                draw() {
-                    ctx.beginPath();
-                    ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
-                    ctx.fillStyle = this.color;
-                    ctx.fill();
-                }
-            }
-
-            const fishArray = Array.from({ length: 30 }, () => new Fish());
-
-            function animate() {
-                ctx.clearRect(0, 0, canvas.width, canvas.height);
-                fishArray.forEach((fish) => {
-                    fish.update();
-                    fish.draw();
-                });
-                requestAnimationFrame(animate);
-            }
-
-            animate();
 
             // 倒计时并自动跳转
             let countdown = 5;
