--- a/index.html
+++ b/index.html
@@ -15,12 +15,22 @@
             body {
                 font-family: "Quicksand", sans-serif;
                 backdrop-filter: blur(10px);
+                margin: 0;
+                padding: 0;
+                overflow: hidden;
             }
-            canvas {
+            .rain-background {
                 position: fixed;
                 top: 0;
                 left: 0;
+                width: 100%;
+                height: 100%;
                 z-index: -1;
+                background-image: url('./rain.svg');
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-attachment: fixed;
             }
         </style>
     </head>
@@ -42,7 +52,7 @@
             }
         </style>
 
-        <canvas id="fishCanvas"></canvas>
+        <div class="rain-background"></div>
 
         <div class="content-box">
             <div class="max-w-md w-full px-6 text-center -mt-12">
@@ -143,55 +153,6 @@
         <!-- 脚本加载 -->
         <script>
             lucide.createIcons();
-
-            const canvas = document.getElementById("fishCanvas");
-            const ctx = canvas.getContext("2d");
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
-
-            window.addEventListener("resize", () => {
-                canvas.width = window.innerWidth;
-                canvas.height = window.innerHeight;
-            });
-
-            class Fish {
-                constructor() {
-                    this.x = Math.random() * canvas.width;
-                    this.y = Math.random() * canvas.height;
-                    this.size = 10 + Math.random() * 10;
-                    this.speedY = 0.5 + Math.random() * 1.5;
-                    this.color = `rgba(255,255,255,${Math.random() * 0.6 + 0.3})`;
-                }
-                update() {
-                    this.y += this.speedY;
-                    if (this.y > canvas.height + this.size) this.y = -this.size;
-                }
-                draw() {
-                    ctx.beginPath();
-                    ctx.ellipse(
-                        this.x,
-                        this.y,
-                        this.size,
-                        this.size,
-                        0,
-                        0,
-                        Math.PI * 2,
-                    );
-                    ctx.fillStyle = this.color;
-                    ctx.fill();
-                }
-            }
-
-            const fishArray = Array.from({ length: 30 }, () => new Fish());
-            function animate() {
-                ctx.clearRect(0, 0, canvas.width, canvas.height);
-                fishArray.forEach((fish) => {
-                    fish.update();
-                    fish.draw();
-                });
-                requestAnimationFrame(animate);
-            }
-            animate();
         </script>
     </body>
 </html>
