--- a/index.html
+++ b/index.html
@@ -38,103 +38,87 @@
         class="dark text-white flex items-center justify-center min-h-screen overflow-hidden"
         style="background-color: #17181c"
     >
-        <style>
-            .content-box {
-                background-color: #1e1e22;
-                border-radius: 16px;
-                padding: 76px 24px 24px;
-                color: #ffffff;
-                box-shadow:
-                    0 4px 20px rgba(0, 0, 0, 0.4),
-                    0 0 8px rgba(0, 0, 0, 0.3);
-                max-width: 500px;
-                margin: 40px auto;
-            }
-        </style>
-
         <div class="rain-background"></div>
 
-        <div class="content-box">
-            <div class="max-w-md w-full px-6 text-center -mt-12">
-                <img
-                    src="./assets/star-bg.png"
-                    alt="Avatar"
-                    class="w-24 h-24 rounded-full object-cover mx-auto shadow-[0_0_30px_rgba(0,0,0,0.4)] mb-4"
-                />
+        <div class="max-w-md w-full px-6 text-center">
+            <img
+                src="./assets/star-bg.png"
+                alt="Avatar"
+                class="w-24 h-24 rounded-full object-cover mx-auto shadow-[0_0_30px_rgba(0,0,0,0.4)] mb-4"
+            />
 
-                <h1 class="text-3xl font-semibold">Hollow Dobt</h1>
-                <p class="text-gray-400 mt-2">Flowers' fade, leaves' birth</p>
+            <h1 class="text-3xl font-semibold">Hollow Dobt</h1>
+            <p class="text-gray-400 mt-2">Flowers' fade, leaves' birth</p>
 
-                <div
-                    class="my-6 mx-auto border-t border-gray-600 w-[208px]"
-                ></div>
+            <div
+                class="my-6 mx-auto border-t border-gray-600 w-[208px]"
+            ></div>
 
-                <div class="flex justify-center gap-4">
-                    <div class="relative group">
-                        <a
-                            href="https://github.com/hollowdobt"
-                            target="_blank"
-                            class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20 shadow hover:shadow-lg transition"
-                        >
-                            <i
-                                data-lucide="github"
-                                class="w-5 h-5 text-white"
-                            ></i>
-                        </a>
-                        <span
-                            class="absolute bottom-full mb-2 left-1/2 -translate-x-1/2 px-2 py-1 text-xs rounded bg-black text-white opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap z-10"
-                        >
-                            GitHub
-                        </span>
-                    </div>
-                    <div class="relative group">
-                        <a
-                            href="mailto:rxq@hollowlib.top"
-                            class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20 shadow hover:shadow-lg transition"
-                        >
-                            <i
-                                data-lucide="mail"
-                                class="w-5 h-5 text-white"
-                            ></i>
-                        </a>
-                        <span
-                            class="absolute bottom-full mb-2 left-1/2 -translate-x-1/2 px-2 py-1 text-xs rounded bg-black text-white opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap z-10"
-                        >
-                            Email
-                        </span>
-                    </div>
-                    <div class="relative group">
-                        <a
-                            href="https://blogs.hollowlib.top"
-                            class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20 shadow hover:shadow-lg transition"
-                        >
-                            <i
-                                data-lucide="briefcase"
-                                class="w-5 h-5 text-white"
-                            ></i>
-                        </a>
-                        <span
-                            class="absolute bottom-full mb-2 left-1/2 -translate-x-1/2 px-2 py-1 text-xs rounded bg-black text-white opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap z-10"
-                        >
-                            Blog
-                        </span>
-                    </div>
-                    <div class="relative group">
-                        <a
-                            href="https://docs.hollowlib.top/"
-                            class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20 shadow hover:shadow-lg transition"
-                        >
-                            <i
-                                data-lucide="book"
-                                class="w-5 h-5 text-white"
-                            ></i>
-                        </a>
-                        <span
-                            class="absolute bottom-full mb-2 left-1/2 -translate-x-1/2 px-2 py-1 text-xs rounded bg-black text-white opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap z-10"
-                        >
-                            Database
-                        </span>
-                    </div>
+            <div class="flex justify-center gap-4">
+                <div class="relative group">
+                    <a
+                        href="https://github.com/hollowdobt"
+                        target="_blank"
+                        class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20 shadow hover:shadow-lg transition"
+                    >
+                        <i
+                            data-lucide="github"
+                            class="w-5 h-5 text-white"
+                        ></i>
+                    </a>
+                    <span
+                        class="absolute bottom-full mb-2 left-1/2 -translate-x-1/2 px-2 py-1 text-xs rounded bg-black text-white opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap z-10"
+                    >
+                        GitHub
+                    </span>
+                </div>
+                <div class="relative group">
+                    <a
+                        href="mailto:rxq@hollowlib.top"
+                        class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20 shadow hover:shadow-lg transition"
+                    >
+                        <i
+                            data-lucide="mail"
+                            class="w-5 h-5 text-white"
+                        ></i>
+                    </a>
+                    <span
+                        class="absolute bottom-full mb-2 left-1/2 -translate-x-1/2 px-2 py-1 text-xs rounded bg-black text-white opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap z-10"
+                    >
+                        Email
+                    </span>
+                </div>
+                <div class="relative group">
+                    <a
+                        href="https://blogs.hollowlib.top"
+                        class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20 shadow hover:shadow-lg transition"
+                    >
+                        <i
+                            data-lucide="briefcase"
+                            class="w-5 h-5 text-white"
+                        ></i>
+                    </a>
+                    <span
+                        class="absolute bottom-full mb-2 left-1/2 -translate-x-1/2 px-2 py-1 text-xs rounded bg-black text-white opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap z-10"
+                    >
+                        Blog
+                    </span>
+                </div>
+                <div class="relative group">
+                    <a
+                        href="https://docs.hollowlib.top/"
+                        class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20 shadow hover:shadow-lg transition"
+                    >
+                        <i
+                            data-lucide="book"
+                            class="w-5 h-5 text-white"
+                        ></i>
+                    </a>
+                    <span
+                        class="absolute bottom-full mb-2 left-1/2 -translate-x-1/2 px-2 py-1 text-xs rounded bg-black text-white opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap z-10"
+                    >
+                        Database
+                    </span>
                 </div>
             </div>
 
