--- a/index.html
+++ b/index.html
@@ -132,6 +132,16 @@
             >
                 © 2025 Hollow Dobt. All rights reserved.
             </div>
+            <div
+                style="
+                    margin-top: 14px;
+                    text-align: center;
+                    font-size: 14px;
+                    color: #888;
+                "
+            >
+                <a href="https://icp.gov.moe/?keyword=20257760" target="_blank">萌ICP备20257760号</a>
+            </div>
         </div>
 
         <!-- 脚本加载 -->
