Project: Download Page Generator

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             <p class="text-gray-400 mt-2">Flowers' fade, leaves' birth</p>
 
             <div
-                class="my-6 mx-auto border-t border-gray-600 w-[208px]"
+                class="my-6 mx-auto border-t border-gray-600"
+                style="width: 260px;"
             ></div>
 
             <div class="flex justify-center gap-4">
@@ -118,6 +119,23 @@
                         class="absolute bottom-full mb-2 left-1/2 -translate-x-1/2 px-2 py-1 text-xs rounded bg-black text-white opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap z-10"
                     >
                         Database
+                    </span>
+                </div>
+                <div class="relative group">
+                    <a
+                        href="https://hollowlib.top/download-page"
+                        target="_blank"
+                        class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20 shadow hover:shadow-lg transition"
+                    >
+                        <i
+                            data-lucide="download"
+                            class="w-5 h-5 text-white"
+                        ></i>
+                    </a>
+                    <span
+                        class="absolute bottom-full mb-2 left-1/2 -translate-x-1/2 px-2 py-1 text-xs rounded bg-black text-white opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap z-10"
+                    >
+                        Download Page
                     </span>
                 </div>
             </div>
