Project: Download Page Generator

--- a/download-page/index.html
+++ b/download-page/index.html
@@ -256,7 +256,7 @@
                         <div class="item-header">
                             <h3 class="item-title">
                                 <i data-lucide="github" class="w-5 h-5"></i>
-                                catalog-index Source Code
+                                catalog-index
                             </h3>
                         </div>
                         <p class="item-description">Loading...</p>
@@ -287,7 +287,7 @@
                         <div class="item-header">
                             <h3 class="item-title">
                                 <i data-lucide="github" class="w-5 h-5"></i>
-                                doc-site
+                                docs-site
                             </h3>
                         </div>
                         <p class="item-description">Loading...</p>
@@ -308,6 +308,37 @@
                     </div>
                     <div class="download-buttons">
                         <a href="https://github.com/HollowDobt/docs-site" class="download-btn">
+                            <i data-lucide="github" class="w-4 h-4"></i>
+                            Source
+                        </a>
+                    </div>
+                </div>
+                <div class="download-item" data-category="GitHub" data-github-url="https://github.com/HollowDobt/algorithm">
+                    <div class="item-content">
+                        <div class="item-header">
+                            <h3 class="item-title">
+                                <i data-lucide="github" class="w-5 h-5"></i>
+                                algorithm
+                            </h3>
+                        </div>
+                        <p class="item-description">Loading...</p>
+                        <div class="item-meta">
+                            <div class="meta-item">
+                                <i data-lucide="star" class="w-3 h-3"></i>
+                                <span>- stars</span>
+                            </div>
+                            <div class="meta-item">
+                                <i data-lucide="git-branch" class="w-3 h-3"></i>
+                                <span>- forks</span>
+                            </div>
+                            <div class="meta-item">
+                                <i data-lucide="calendar" class="w-3 h-3"></i>
+                                <span>-</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="download-buttons">
+                        <a href="https://github.com/HollowDobt/algorithm" class="download-btn">
                             <i data-lucide="github" class="w-4 h-4"></i>
                             Source
                         </a>
